<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    tool:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_extract"
            android:icon="@drawable/ic_extract"
            android:title="@string/nav_extract" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_transfer"
            android:title="@string/nav_transfer" />
    </group>

    <item android:title="Logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>

    </item>
</menu>